Align filters with govuk search box and bugfix
- align filters with govuk search box
- re-apply absolute positioning to date-range visually-hidden checkbox

--- a/app/assets/stylesheets/frontend/helpers/_filter.scss
+++ b/app/assets/stylesheets/frontend/helpers/_filter.scss
@@ -88,6 +88,9 @@
       @include ig-core-14;
       padding-left: $gutter-two-thirds;
       padding-right: $gutter-one-third;
+      &.visuallyhidden {
+        position: absolute;
+      }
     }
   }
 
