--- a/app/assets/stylesheets/frontend/views/_policies.scss
+++ b/app/assets/stylesheets/frontend/views/_policies.scss
@@ -14,8 +14,15 @@
     .block-2 {
       float: left;
       width: 33.333%;
+      .inner-block {
+        padding: 0 $gutter*1.5 0 $gutter;
+      }
+
       @include right-to-left {
         float: right;
+        .inner-block {
+          padding: 0 $gutter 0 $gutter*1.5;
+        }
       }
     }
 
